--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,7 +6,7 @@
 #    By: tzhou <tzhou@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/02/10 19:51:18 by tzhou             #+#    #+#              #
-#    Updated: 2017/02/14 04:32:27 by tzhou            ###   ########.fr        #
+#    Updated: 2017/02/14 15:43:01 by tzhou            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -32,6 +32,7 @@ all: $(NAME)
 
 $(NAME): $(LIBUNIT)
 	gcc $(CFLAGS) $(SRC) -I ../includes -L .. -lunit -o test
+	./test
 
 $(LIBUNIT):
 	make -C.. -f Makefile libunit.a
