--- a/real_tests/Makefile
+++ b/real_tests/Makefile
@@ -6,7 +6,7 @@
 #    By: tzhou <tzhou@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/02/10 19:51:18 by tzhou             #+#    #+#              #
-#    Updated: 2017/02/14 20:59:48 by tzhou            ###   ########.fr        #
+#    Updated: 2017/02/14 21:39:42 by tzhou            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -29,9 +29,30 @@ STRLENSRC = 00_launcher.c 01_basic_test.c 02_null_test.c 03_large_test.c
 
 MEMSETSRC = 00_launcher.c 01_basic_test.c 02_null_test.c
 
+ISALPHASRC = 00_launcher.c 01_basic_test.c
+
+ISALNUMSRC = 00_launcher.c 01_basic_test.c
+
+ISASCIISRC = 00_launcher.c 01_basic_test.c
+
+ISDIGITSRC = 00_launcher.c 01_basic_test.c
+
+ISPRINTSRC = 00_launcher.c 01_basic_test.c
+
+TOUPPERSRC = 00_launcher.c 01_basic_test.c
+
+TOLOWERSRC = 00_launcher.c 01_basic_test.c
+
 SRC = main.c \
 	  $(addprefix strlen/, $(STRLENSRC)) \
-	  $(addprefix memset/, $(MEMSETSRC))
+	  $(addprefix memset/, $(MEMSETSRC)) \
+	  $(addprefix isalpha/, $(ISALPHASRC)) \
+	  $(addprefix isalnum/, $(ISALNUMSRC)) \
+	  $(addprefix isascii/, $(ISASCIISRC)) \
+	  $(addprefix isdigit/, $(ISDIGITSRC)) \
+	  $(addprefix isprint/, $(ISPRINTSRC)) \
+	  $(addprefix toupper/, $(TOUPPERSRC)) \
+	  $(addprefix tolower/, $(TOLOWERSRC)) \
 
 all: $(NAME)
 
